--- a/research.html
+++ b/research.html
@@ -221,7 +221,7 @@
                 <p><b>Manuel Tonneau</b>, Pedro Vitor Quinta de Castro, Karim Lasri, Ibrahim Farouq, Lakshminarayanan Subramanian, Victor Orozco-Olvera, Samuel Fraiberger</p>
                 <p><i>ACL'24: Annual Meeting of the Association for Computational Linguistics</i></p>
                 <div class="paper-buttons">
-                   <a class="button" href="https://arxiv.org/abs/2403.19260" target="_blank">📜 Paper</a>
+                   <a class="button" href="https://aclanthology.org/2024.acl-long.488/" target="_blank">📜 Paper</a>
                     <a class="button" href="https://x.com/ManuelTonneau/status/1821125918691123289" target="_blank">🐦 Twitter Thread</a>
                 </div>
              </div>
@@ -237,7 +237,7 @@
                 <p><b>Manuel Tonneau</b>, Diyi Liu, Samuel Fraiberger, Ralph Schroeder, Scott A. Hale, Paul Röttger</p>
                 <p><i>WOAH'24: Workshop on Online Abuse and Harms</i></p>
                 <div class="paper-buttons">
-                   <a class="button" href="https://arxiv.org/abs/2404.17874" target="_blank">📜 Paper</a>
+                   <a class="button" href="https://aclanthology.org/2024.woah-1.23/" target="_blank">📜 Paper</a>
                    <a class="button" href="https://x.com/ManuelTonneau/status/1793628251455389733" target="_blank">🐦 Twitter Thread</a>
                 </div>
              </div>
