--- a/index.html
+++ b/index.html
@@ -145,16 +145,17 @@
    <div class="docs-section">
       <h4>Bio</h4>
       <p>
-         I am a second-year Ph.D. student in Social Data Science at the <a href='https://www.oii.ox.ac.uk/' target="_blank" rel="noopener noreferrer">Oxford Internet Institute</a> of the University of Oxford where I am supervised by <a href='https://www.oii.ox.ac.uk/people/profiles/ralph-schroeder/' target="_blank" rel="noopener noreferrer">Ralph Schroeder</a> and <a href='http://www.scotthale.net/blog/' target="_blank" rel="noopener noreferrer">Scott Hale</a>.
+         I am a second-year Ph.D. student in Social Data Science and a <a href='https://www.oii.ox.ac.uk/about/giving/the-shirley-scholars-fund/' target="_blank" rel="noopener noreferrer">Shirley Scholar</a> at the <a href='https://www.oii.ox.ac.uk/' target="_blank" rel="noopener noreferrer">Oxford Internet Institute</a> of the University of Oxford where I am supervised by <a href='https://www.oii.ox.ac.uk/people/profiles/ralph-schroeder/' target="_blank" rel="noopener noreferrer">Ralph Schroeder</a> and <a href='http://www.scotthale.net/blog/' target="_blank" rel="noopener noreferrer">Scott Hale</a>.
          I also consult for the World Bank under the supervision of <a href='http://www.samuelfraiberger.com/' target="_blank" rel="noopener noreferrer">Samuel Fraiberger</a> and am affiliated with the <a href='https://nyunetworks.github.io/' target="_blank" rel="noopener noreferrer">Open Networks and Big Data Lab</a> at New York University.
       </p>
        <p>
            My PhD research is focused on the moderation of online harmful content. Specifically, I study the extent to which such moderation may treat users unequally across geographies, from unequal automatic detection performance to unequal moderation enforcement through a potential misalignment between user preferences towards moderation and community guidelines.
+           My doctoral work is generously funded by a Global Merit Award from the <a href='https://www.oii.ox.ac.uk/about/giving/the-shirley-scholars-fund/' target="_blank" rel="noopener noreferrer">Shirley Scholars Fund</a>.
+
        </p>
       <p>
          Prior to the Ph.D., I worked as a research assistant at the World Bank and the <a href='https://cmb.huma-num.fr//' target="_blank" rel="noopener noreferrer">Centre Marc Bloch</a> on various computational social science projects.
          I hold an Engineering degree in Statistics and Economics (eq. to MSc) from <a href='https://www.ensae.fr/en' target="_blank" rel="noopener noreferrer">ENSAE Paris</a> as well as an MSc in Economics from <a href='https://www.hu-berlin.de/en' target="_blank" rel="noopener noreferrer">Humboldt-Universität zu Berlin</a>.
-         My doctoral work is generously funded by a Global Merit Award from the <a href='https://www.oii.ox.ac.uk/about/giving/the-shirley-scholars-fund/' target="_blank" rel="noopener noreferrer">Shirley Scholars Fund</a>.
 
       </p>
 
