--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
    <div class="docs-section">
       <h4>Bio</h4>
       <p>
-         I am a second-year Ph.D. student in Social Data Science and a <a href='https://www.oii.ox.ac.uk/about/giving/the-shirley-scholars-fund/' target="_blank" rel="noopener noreferrer">Shirley Scholar</a> at the <a href='https://www.oii.ox.ac.uk/' target="_blank" rel="noopener noreferrer">Oxford Internet Institute</a> of the University of Oxford where I am supervised by <a href='https://www.oii.ox.ac.uk/people/profiles/ralph-schroeder/' target="_blank" rel="noopener noreferrer">Ralph Schroeder</a> and <a href='http://www.scotthale.net/blog/' target="_blank" rel="noopener noreferrer">Scott Hale</a>.
+         I am a third year Ph.D. student in Social Data Science and a <a href='https://www.oii.ox.ac.uk/about/giving/the-shirley-scholars-fund/' target="_blank" rel="noopener noreferrer">Shirley Scholar</a> at the <a href='https://www.oii.ox.ac.uk/' target="_blank" rel="noopener noreferrer">Oxford Internet Institute</a> of the University of Oxford where I am supervised by <a href='https://www.oii.ox.ac.uk/people/profiles/ralph-schroeder/' target="_blank" rel="noopener noreferrer">Ralph Schroeder</a> and <a href='http://www.scotthale.net/blog/' target="_blank" rel="noopener noreferrer">Scott Hale</a>.
          I also consult for the World Bank under the supervision of <a href='http://www.samuelfraiberger.com/' target="_blank" rel="noopener noreferrer">Samuel Fraiberger</a> and am affiliated with the <a href='https://nyunetworks.github.io/' target="_blank" rel="noopener noreferrer">Open Networks and Big Data Lab</a> at New York University.
       </p>
        <p>
