--- a/research.html
+++ b/research.html
@@ -214,6 +214,21 @@
           <!-- paper 1 -->
           <div class="pub-entry">
              <div class="pub-image">
+                <img src="assets/images/papers/indian_bhed.png" alt="Indian-BhED">
+             </div>
+             <div class="pub-text">
+                <p class="title"><b>Indian-BhED: A Dataset for Measuring India-Centric Biases in Large Language Models</b></p>
+                <p>Khyati Khandelwal, <b>Manuel Tonneau</b>, Andrew M. Bean, Hannah Rose Kirk, Scott A. Hale</p>
+                <p><i>GoodIT '24: Proceedings of the 2024 International Conference on Information Technology for Social Good</i></p>
+                <div class="paper-buttons">
+                   <a class="button" href="https://dl.acm.org/doi/10.1145/3677525.3678666" target="_blank">📜 Paper</a>
+                </div>
+             </div>
+          </div>
+
+          <!-- paper 1 -->
+          <div class="pub-entry">
+             <div class="pub-image">
                 <img src="assets/images/papers/naijahate.png" alt="NaijaHate">
              </div>
              <div class="pub-text">
