--- a/index.html
+++ b/index.html
@@ -226,6 +226,18 @@
     <div class="newsbox" style="height:170px;overflow:auto;border-radius: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 5px;;
     display: inline-block; text-align: left;">
     <table style="width: 100%">
+                <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2024-11-01</td>
+          <td style="width: 90%">
+              Our <a href="https://huggingface.co/collections/manueltonneau/hate-speech-supersets-664ef6d2bc40cce7a8b1092f">hate speech supersets</a>, combining all hate speech corpora in 8 languages, have reached 2K downloads on Hugging Face!
+          </td>
+      </tr>
+        <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2024-10-01</td>
+          <td style="width: 90%">
+              Just started a fellowship at the <a href="https://www.weizenbaum-institut.de/">Weizenbaum Institute</a> in Berlin, Germany, following an invitation from <a href="https://elizaveta-kuznetsova.com/">Elizaveta Kuznetsova</a>!
+          </td>
+      </tr>
         <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2024-05-15</td>
           <td style="width: 90%">
