--- a/index.html
+++ b/index.html
@@ -238,6 +238,12 @@
               🇩🇪 Just started a fellowship at the <a href="https://www.weizenbaum-institut.de/">Weizenbaum Institute</a> in Berlin, Germany, following an invitation from <a href="https://elizaveta-kuznetsova.com/">Elizaveta Kuznetsova</a>.
           </td>
       </tr>
+                <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2024-08-15</td>
+          <td style="width: 90%">
+              💬  Presented our work on cultural bias in hate speech datasets <a href="https://aclanthology.org/2024.woah-1.23/">(link)</a> at at <a href="https://www.workshopononlineabuse.com/">WOAH</a> and <a href="https://sites.google.com/view/c3nlp/home">C3NLP</a>
+          </td>
+      </tr>
         <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2024-05-15</td>
           <td style="width: 90%">
