correct small typos

--- a/index.html
+++ b/index.html
@@ -229,13 +229,13 @@
                 <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2024-11-01</td>
           <td style="width: 90%">
-              🤗 Our <a href="https://huggingface.co/collections/manueltonneau/hate-speech-supersets-664ef6d2bc40cce7a8b1092f">hate speech supersets</a>, combining all hate speech corpora in 8 languages, have \n reached 2K downloads on Hugging Face!
+              🤗 Our <a href="https://huggingface.co/collections/manueltonneau/hate-speech-supersets-664ef6d2bc40cce7a8b1092f">hate speech supersets</a>, combining all hate speech corpora in 8 languages, have   reached 2K downloads on Hugging Face!
           </td>
       </tr>
         <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2024-10-01</td>
           <td style="width: 90%">
-              🇩🇪 Just started a fellowship at the <a href="https://www.weizenbaum-institut.de/">Weizenbaum Institute</a> in Berlin, Germany, following an invitation from <a href="https://elizaveta-kuznetsova.com/">Elizaveta Kuznetsova</a>.
+              🇩🇪 Just started a fellowship at the <a href="https://www.weizenbaum-institut.de/">Weizenbaum Institute</a> in Berlin, Germany, following an invitation from <a href="https://elizaveta-kuznetsova.com/">Elizaveta Kuznetsova</a>
           </td>
       </tr>
                 <tr>
