--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">Summer 2024</td>
           <td style="width: 90%">
-              💬  Presented our work on cultural bias in hate speech datasets <a href="https://aclanthology.org/2024.woah-1.23/">(link)</a> at at <a href="https://www.workshopononlineabuse.com/">WOAH</a> and <a href="https://sites.google.com/view/c3nlp/home">C3NLP</a>
+              💬  Presented our work on cultural bias in hate speech datasets <a href="https://aclanthology.org/2024.woah-1.23/">(link)</a> at <a href="https://www.workshopononlineabuse.com/">WOAH</a> and <a href="https://sites.google.com/view/c3nlp/home">C3NLP</a>
           </td>
       </tr>
         <tr>
