--- a/index.html
+++ b/index.html
@@ -229,6 +229,16 @@
     <div class="newsbox" style="height:170px;overflow:auto;border-radius: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 5px;;
     display: inline-block; text-align: left;">
     <table style="width: 100%">
+
+              <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2023-09-15</td>
+          <td style="width: 90%">
+              📜 New <a href="https://arxiv.org/abs/2411.15462">pre-print</a> on <a href="https://huggingface.co/datasets/manueltonneau/hateday">HateDay</a>, the first hate speech dataset representative of a day on Twitter. Feedback welcome!
+
+
+          </td>
+      </tr>
+
                 <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2024-11-01</td>
           <td style="width: 90%">
