--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2023-09-15</td>
           <td style="width: 90%">
-              📜 New <a href="https://arxiv.org/abs/2411.15462">pre-print</a> on <a href="https://huggingface.co/datasets/manueltonneau/hateday">HateDay</a>, the first hate speech dataset representative of a day on Twitter. Feedback welcome!
+              📜 New <a href="https://arxiv.org/abs/2411.15462">pre-print</a> on <a href="https://huggingface.co/datasets/manueltonneau/hateday">HateDay</a>, the first hate speech dataset representative of a day\n on Twitter. Feedback welcome!
 
 
           </td>
