--- a/index.html
+++ b/index.html
@@ -229,9 +229,17 @@
     <div class="newsbox" style="height:170px;overflow:auto;border-radius: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 5px;;
     display: inline-block; text-align: left;">
     <table style="width: 100%">
+              <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2024-12-10</td>
+          <td style="width: 90%">
+              📜 OII colleagues and I provided <a href="https://ec.europa.eu/info/law/better-regulation/have-your-say/initiatives/13817-Delegated-Regulation-on-data-access-provided-for-in-the-Digital-Services-Act/F3498917_en">feedback</a> to the European Commission on a draft act of the Digital Services Act (DSA), specifically on platform data access for researchers and platform transparency.
+
+
+          </td>
+      </tr>
 
               <tr>
-        <td style="width: 10%; min-width: 75px;" class="datev">2023-09-15</td>
+        <td style="width: 10%; min-width: 75px;" class="datev">2024-11-23</td>
           <td style="width: 90%">
               📜 New <a href="https://arxiv.org/abs/2411.15462">pre-print</a> on <a href="https://huggingface.co/datasets/manueltonneau/hateday">HateDay</a>, the first hate speech dataset representative of a day on Twitter. Feedback welcome!
 
