--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2024-12-10</td>
           <td style="width: 90%">
-              📜 OII colleagues and I provided <a href="https://ec.europa.eu/info/law/better-regulation/have-your-say/initiatives/13817-Delegated-Regulation-on-data-access-provided-for-in-the-Digital-Services-Act/F3498917_en">feedback</a> to the European Commission on a draft act of the Digital Services Act (DSA), specifically on platform data access for researchers and platform transparency.
+              💬 OII colleagues and I provided <a href="https://ec.europa.eu/info/law/better-regulation/have-your-say/initiatives/13817-Delegated-Regulation-on-data-access-provided-for-in-the-Digital-Services-Act/F3498917_en">feedback</a> to the European Commission on a draft act of the Digital Services Act (DSA), specifically on platform data access for researchers and platform transparency.
 
 
           </td>
