--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p>Member of the Open Networks and Big Data Lab, New York University</p>
 
 
-            <p>manuel.tonneau@oii.ox.ac.uk</p>
+            <p>Email: X@Y where X=<i>manuel.tonneau</i> and Y=<i>oii.ox.ac.uk</i></p>
           <p> </p>
             <p>Social:
                            <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">
