--- a/research.html
+++ b/research.html
@@ -124,8 +124,9 @@
             <p>Consultant, Development Impact (DIME), The World Bank</p>
             <p>Member of the Open Networks and Big Data Lab, New York University</p>
 
+            <br>
 
-            <p>manuel.tonneau@oii.ox.ac.uk</p>
+            <p>Email: X@Y where X=<i>manuel.tonneau</i> and Y=<i>oii.ox.ac.uk</i></p>
             <p> </p>
             <p>Social:
                            <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">
