--- a/index.html
+++ b/index.html
@@ -230,6 +230,20 @@
     display: inline-block; text-align: left;">
     <table style="width: 100%">
               <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2025-02-20</td>
+          <td style="width: 90%">
+              💬 Gave a virtual talk on HateDay at the Stanford Security Lunch Seminar
+
+              <a href="/assets/images/stanford_lunch_seminar.jpg">(photo)</a>
+
+
+
+          </td>
+      </tr>
+
+
+
+              <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2024-12-10</td>
           <td style="width: 90%">
               💬 OII colleagues and I provided <a href="https://ec.europa.eu/info/law/better-regulation/have-your-say/initiatives/13817-Delegated-Regulation-on-data-access-provided-for-in-the-Digital-Services-Act/F3498917_en">feedback</a> to the European Commission on a draft act of the Digital Services Act (DSA), specifically on platform data access for researchers and platform transparency. We wrote a related blog post <a href="https://www.oii.ox.ac.uk/news-events/oii-researchers-propose-recommendations-for-effective-data-governance-in-light-of-the-eus-digital-service-act/">here</a>.
