add claim matching

--- a/index.html
+++ b/index.html
@@ -229,6 +229,15 @@
     <div class="newsbox" style="height:170px;overflow:auto;border-radius: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 5px;;
     display: inline-block; text-align: left;">
     <table style="width: 100%">
+
+                      <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2024-11-23</td>
+          <td style="width: 90%">
+              📜 New <a href="https://arxiv.org/abs/2503.03417">pre-print</a> on claim matching for robust misinformation detection on social media
+
+
+          </td>
+      </tr>
               <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2025-02-20</td>
           <td style="width: 90%">
