--- a/index.html
+++ b/index.html
@@ -233,6 +233,14 @@
                       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2025-03-06</td>
           <td style="width: 90%">
+              📜 New <a href="https://arxiv.org/abs/2504.20519">pre-print</a> on AI persuasion in the context of vaccines. Feedback welcome!
+
+
+          </td>
+      </tr>
+                      <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2025-03-06</td>
+          <td style="width: 90%">
               📜 New <a href="https://arxiv.org/abs/2503.03417">pre-print</a> on claim matching for robust misinformation detection on social media
 
 
