--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
     <table style="width: 100%">
 
                       <tr>
-        <td style="width: 10%; min-width: 75px;" class="datev">2025-03-06</td>
+        <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
           <td style="width: 90%">
-              📜 New <a href="https://arxiv.org/abs/2504.20519">pre-print</a> on AI persuasion in the context of vaccines. Feedback welcome!
+              📜 New <a href="https://arxiv.org/abs/2504.20519">pre-print</a> on the promises and limits of AI persuasion in the context of vaccines. Feedback welcome!
 
 
           </td>
