--- a/index.html
+++ b/index.html
@@ -229,7 +229,13 @@
     <div class="newsbox" style="height:170px;overflow:auto;border-radius: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 5px;;
     display: inline-block; text-align: left;">
     <table style="width: 100%">
+                      <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
+          <td style="width: 90%">
+              💬 Presented ongoing work on hate speech moderation and the potential of human-AI collaboration to improve at the Hertie School Data Science Lab. You can find details in this <a href="https://www.hertie-school.org/en/datasciencelab/news/detail/content/human-ai-collaboration-could-improve-the-protection-of-social-media-users-from-hate-speech">blog post</a> and a summary in this <a href="https://www.youtube.com/watch?v=17Sius_ri48">short video</a>.
 
+          </td>
+      </tr>
                       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
           <td style="width: 90%">
