--- a/index.html
+++ b/index.html
@@ -229,6 +229,26 @@
     <div class="newsbox" style="height:170px;overflow:auto;border-radius: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 5px;;
     display: inline-block; text-align: left;">
     <table style="width: 100%">
+
+    <tr>
+      <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
+      <td style="width: 90%;">
+        📜 Two papers accepted at ACL 2025:
+        <ul style="margin: 0; padding-left: 1em;">
+          <li>
+            <a href="https://arxiv.org/abs/2411.15462">
+              "HateDay: Insights from a Global Hate Speech Dataset Representative of a Day on Twitter"
+            </a> — Main Conference
+          </li>
+          <li>
+            <a href="https://arxiv.org/abs/2503.03417">
+              "When Claims Evolve: Evaluating and Enhancing the Robustness of Embedding Models Against Misinformation Edits"
+            </a> — Findings
+          </li>
+        </ul>
+      </td>
+    </tr>
+
                       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
           <td style="width: 90%">
