--- a/index.html
+++ b/index.html
@@ -230,24 +230,15 @@
     display: inline-block; text-align: left;">
     <table style="width: 100%">
 
-    <tr>
-      <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
-      <td style="width: 90%;">
-        📜 Two papers accepted at ACL 2025:
-        <ul style="margin: 0; padding-left: 1em;">
-          <li>
-            <a href="https://arxiv.org/abs/2411.15462">
-              "HateDay: Insights from a Global Hate Speech Dataset Representative of a Day on Twitter"
-            </a> — Main Conference
-          </li>
-          <li>
-            <a href="https://arxiv.org/abs/2503.03417">
-              "When Claims Evolve: Evaluating and Enhancing the Robustness of Embedding Models Against Misinformation Edits"
-            </a> — Findings
-          </li>
-        </ul>
-      </td>
-    </tr>
+        <tr>
+          <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
+          <td style="width: 90%;">
+            📜 Two papers accepted at ACL 2025:
+            "<a href="https://arxiv.org/abs/2411.15462">HateDay: Insights from a Global Hate Speech Dataset Representative of a Day on Twitter</a>" and
+            "<a href="https://arxiv.org/abs/2503.03417">When Claims Evolve: Evaluating and Enhancing the Robustness of Embedding Models Against Misinformation Edits</a>"
+          </td>
+        </tr>
+
 
                       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
