--- a/index.html
+++ b/index.html
@@ -240,13 +240,13 @@
         </tr>
 
 
-                      <tr>
-        <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
-          <td style="width: 90%">
-              💬 Presented ongoing work on hate speech moderation and the potential of human-AI collaboration to improve it at the Hertie School Data Science Lab. You can find details in this <a href="https://www.hertie-school.org/en/datasciencelab/news/detail/content/human-ai-collaboration-could-improve-the-protection-of-social-media-users-from-hate-speech">blog post</a> and a short summary in this <a href="https://www.youtube.com/watch?v=17Sius_ri48">video</a>.
-
+        <tr>
+          <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
+          <td style="width: 90%;">
+            💬 Gave a talk at the Hertie School Data Science Lab on human-AI collaboration for hate speech moderation (<a href="https://www.hertie-school.org/en/datasciencelab/news/detail/content/human-ai-collaboration-could-improve-the-protection-of-social-media-users-from-hate-speech">blog post</a>, <a href="https://www.youtube.com/watch?v=17Sius_ri48">video</a>)
           </td>
-      </tr>
+        </tr>
+
                       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
           <td style="width: 90%">
