lower fontsize in news box

--- a/index.html
+++ b/index.html
@@ -227,15 +227,15 @@
       <h4>News</h4>
 
     <div class="newsbox" style="height:170px;overflow:auto;border-radius: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 5px;;
-    display: inline-block; text-align: left;">
+    display: inline-block; text-align: left; font-size: 13px;">
     <table style="width: 100%">
 
         <tr>
           <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
           <td style="width: 90%;">
             📜 Two papers accepted at ACL 2025:
-            "<a href="https://arxiv.org/abs/2411.15462">HateDay: Insights from a Global Hate Speech Dataset Representative of a Day on Twitter</a>" and
-            "<a href="https://arxiv.org/abs/2503.03417">When Claims Evolve: Evaluating and Enhancing the Robustness of Embedding Models Against Misinformation Edits</a>"
+            "<a href="https://arxiv.org/abs/2411.15462">HateDay: Insights from a Global Hate Speech Dataset Representative of a Day on Twitter</a>" (Main) and
+            "<a href="https://arxiv.org/abs/2503.03417">When Claims Evolve: Evaluating and Enhancing the Robustness of Embedding Models Against Misinformation Edits</a>" (Findings)
           </td>
         </tr>
 
