leave out preprints

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <table style="width: 100%">
 
         <tr>
-          <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
+          <td style="width: 10%; min-width: 75px;" class="datev">2025-05-16</td>
           <td style="width: 90%;">
             📜 Two papers accepted at ACL 2025:
             "<a href="https://arxiv.org/abs/2411.15462">HateDay: Insights from a Global Hate Speech Dataset Representative of a Day on Twitter</a>" (Main) and
@@ -239,29 +239,35 @@
           </td>
         </tr>
 
+        <tr>
+          <td style="width: 10%; min-width: 75px;" class="datev">2025-05-09</td>
+          <td style="width: 90%;">
+            💬 Gave a talk at the MilaNLP lab of Bocconi University
+          </td>
+        </tr>
 
         <tr>
           <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
           <td style="width: 90%;">
-            💬 Gave a talk at the Hertie School Data Science Lab on human-AI collaboration for hate speech moderation (<a href="https://www.hertie-school.org/en/datasciencelab/news/detail/content/human-ai-collaboration-could-improve-the-protection-of-social-media-users-from-hate-speech">blog post</a>, <a href="https://www.youtube.com/watch?v=17Sius_ri48">video</a>)
+            💬 Gave a talk at the Hertie School Data Science Lab (<a href="https://www.hertie-school.org/en/datasciencelab/news/detail/content/human-ai-collaboration-could-improve-the-protection-of-social-media-users-from-hate-speech">blog post</a>, <a href="https://www.youtube.com/watch?v=17Sius_ri48">video</a>)
           </td>
         </tr>
 
-                      <tr>
-        <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>
-          <td style="width: 90%">
-              📜 New <a href="https://arxiv.org/abs/2504.20519">pre-print</a> on the promises and limits of AI persuasion in the context of vaccines. Feedback welcome!
+<!--                      <tr>-->
+<!--        <td style="width: 10%; min-width: 75px;" class="datev">2025-04-30</td>-->
+<!--          <td style="width: 90%">-->
+<!--              📜 New <a href="https://arxiv.org/abs/2504.20519">paper</a> on the promises and limits of AI persuasion in the context of vaccines. Feedback welcome!-->
 
 
-          </td>
-      </tr>
-                      <tr>
-        <td style="width: 10%; min-width: 75px;" class="datev">2025-03-06</td>
-          <td style="width: 90%">
-              📜 New <a href="https://arxiv.org/abs/2503.03417">pre-print</a> on claim matching for robust misinformation detection on social media
+<!--          </td>-->
+<!--      </tr>-->
+<!--                      <tr>-->
+<!--        <td style="width: 10%; min-width: 75px;" class="datev">2025-03-06</td>-->
+<!--          <td style="width: 90%">-->
+<!--              📜 New <a href="https://arxiv.org/abs/2503.03417">pre-print</a> on claim matching for robust misinformation detection on social media-->
 
 
-          </td>
+<!--          </td>-->
       </tr>
               <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2025-02-20</td>
