--- a/index.html
+++ b/index.html
@@ -283,23 +283,22 @@
 
 
 
-              <tr>
-        <td style="width: 10%; min-width: 75px;" class="datev">2024-12-10</td>
-          <td style="width: 90%">
-              💬 OII colleagues and I provided <a href="https://ec.europa.eu/info/law/better-regulation/have-your-say/initiatives/13817-Delegated-Regulation-on-data-access-provided-for-in-the-Digital-Services-Act/F3498917_en">feedback</a> to the European Commission on a draft act of the Digital Services Act (DSA), specifically on platform data access for researchers and platform transparency. We wrote a related blog post <a href="https://www.oii.ox.ac.uk/news-events/oii-researchers-propose-recommendations-for-effective-data-governance-in-light-of-the-eus-digital-service-act/">here</a>.
+            <tr>
+              <td style="width: 10%; min-width: 75px;" class="datev">2024-12-10</td>
+              <td style="width: 90%">
+                💬 Gave <a href="https://ec.europa.eu/info/law/better-regulation/have-your-say/initiatives/13817-Delegated-Regulation-on-data-access-provided-for-in-the-Digital-Services-Act/F3498917_en">feedback</a> on the EU Digital Services Act with OII colleagues. Read our <a href="https://www.oii.ox.ac.uk/news-events/oii-researchers-propose-recommendations-for-effective-data-governance-in-light-of-the-eus-digital-service-act/">blog post</a>.
+              </td>
+            </tr>
 
 
-          </td>
-      </tr>
-
-              <tr>
-        <td style="width: 10%; min-width: 75px;" class="datev">2024-11-23</td>
-          <td style="width: 90%">
-              📜 New <a href="https://arxiv.org/abs/2411.15462">pre-print</a> on <a href="https://huggingface.co/datasets/manueltonneau/hateday">HateDay</a>, the first hate speech dataset representative of a day on Twitter. Feedback welcome!
+<!--              <tr>-->
+<!--        <td style="width: 10%; min-width: 75px;" class="datev">2024-11-23</td>-->
+<!--          <td style="width: 90%">-->
+<!--              📜 New <a href="https://arxiv.org/abs/2411.15462">pre-print</a> on <a href="https://huggingface.co/datasets/manueltonneau/hateday">HateDay</a>, the first hate speech dataset representative of a day on Twitter. Feedback welcome!-->
 
 
-          </td>
-      </tr>
+<!--          </td>-->
+<!--      </tr>-->
 
                 <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2024-11-01</td>
@@ -310,7 +309,7 @@
         <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2024-10-01</td>
           <td style="width: 90%">
-              🇩🇪 Just started a fellowship at the <a href="https://www.weizenbaum-institut.de/">Weizenbaum Institute</a> in Berlin, Germany, following an invitation from <a href="https://elizaveta-kuznetsova.com/">Elizaveta Kuznetsova</a>
+              🇩🇪 Started a fellowship at the <a href="https://www.weizenbaum-institut.de/">Weizenbaum Institute</a> in Berlin, Germany, following an invitation from <a href="https://elizaveta-kuznetsova.com/">Elizaveta Kuznetsova</a>
           </td>
       </tr>
                 <tr>
@@ -346,7 +345,7 @@
       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2023-10-20</td>
           <td style="width: 90%">
-              💬 Will present my work on content moderation at the upcoming workshop on “Alternative Platforms/Platform Alternatives: Comparisons and Transnational Flows” at the Weizenbaum Institute in Berlin, Germany
+              💬 Gave a talk at the Weizenbaum Institute in Berlin, Germany
 
 <!--              <a href="/assets/images/ic2s2_2023.jpg">(photo)</a>-->
 
@@ -355,14 +354,14 @@
           </td>
       </tr>
 
-      <tr>
-        <td style="width: 10%; min-width: 75px;" class="datev">2023-09-15</td>
-          <td style="width: 90%">
-              📜 New pre-print on disparities in LLM bias between India and the West. Feedback welcome!
-                              <a href="http://arxiv.org/abs/2309.08573">(link)</a>
+<!--      <tr>-->
+<!--        <td style="width: 10%; min-width: 75px;" class="datev">2023-09-15</td>-->
+<!--          <td style="width: 90%">-->
+<!--              📜 New pre-print on disparities in LLM bias between India and the West. Feedback welcome!-->
+<!--                              <a href="http://arxiv.org/abs/2309.08573">(link)</a>-->
 
-          </td>
-      </tr>
+<!--          </td>-->
+<!--      </tr>-->
 
       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2023-07-20</td>
