--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
         <tr>
           <td style="width: 10%; min-width: 75px;" class="datev">2025-05-09</td>
           <td style="width: 90%;">
-            💬 Gave a talk at the MilaNLP lab of Bocconi University
+            💬 Gave a talk at the MilaNLP lab of Bocconi University <a href="/assets/images/milanlp.jpg">(photo)</a>
+
           </td>
         </tr>
 
