update social media

--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
             <p>Email: X@Y where X=<i>manuel.tonneau</i> and Y=<i>oii.ox.ac.uk</i></p>
           <p> </p>
             <p>Social:
-                           <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">
-               <i class="fa fa-twitter" aria-hidden="true"></i>
-            </span>
                                            <span onclick="window.open('https://bsky.app/profile/manueltonneau.bsky.social')" style="cursor: pointer">
                <img src="/assets/images/bluesky.png" style="width:20px;"/>
             </span>
-                           <span onclick="window.open('https://piaille.fr/@manueltonneau')" style="cursor: pointer">
-               <img src="/assets/images/mastodon.svg" style="width:20px;"/>
-            </span>
+<!--                           <span onclick="window.open('https://piaille.fr/@manueltonneau')" style="cursor: pointer">-->
+<!--               <img src="/assets/images/mastodon.svg" style="width:20px;"/>-->
+<!--            </span>-->
                             <span onclick="window.open('https://www.linkedin.com/in/manuel-tonneau/')" style="cursor: pointer">
                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+            </span>
+                                           <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">
+               <i class="fa fa-twitter" aria-hidden="true"></i>
             </span>
                 </p>
           <p> Resources:
