--- a/research.html
+++ b/research.html
@@ -214,6 +214,32 @@
        <div class="tab-pane active" id="papers-all">
           <span class="anchor" id="JKOICNN"></span>
 
+                     <div class="pub-entry">
+             <div class="pub-image">
+                <img src="assets/images/papers/hateday.png" alt="HateDay">
+             </div>
+             <div class="pub-text">
+                <p class="title"><b>HateDay: Insights from a Global Hate Speech Dataset Representative of a Day on Twitter</b></p>
+                <p><b>Manuel Tonneau</b>, Diyi Liu, Niyati Malhotra, Scott A. Hale, Samuel P. Fraiberger, Victor Orozco-Olvera, Paul Röttger</p>
+                <p><i>Forthcoming in ACL'25: Annual Meeting of the Association for Computational Linguistics</i></p>
+                <div class="paper-buttons">
+                   <a class="button" href="https://arxiv.org/abs/2411.15462" target="_blank">📜 Paper</a>
+                    <a class="button" href="https://bsky.app/profile/manueltonneau.bsky.social/post/3lbu3etupas2i" target="_blank">🦋 Bluesky Thread</a>
+                </div>
+             </div>
+          </div>
+                        <div class="pub-image">
+                <img src="assets/images/papers/claim_misinfo.png" alt="ClaimsEvolve">
+             </div>
+                        <div class="pub-text">
+                <p class="title"><b>When Claims Evolve: Evaluating and Enhancing the Robustness of Embedding Models Against Misinformation Edits</b></p>
+                <p>Jabez Magomere, Emanuele La Malfa,<b>Manuel Tonneau</b>, Ashkan Kazemi, Scott Hale</p>
+                <p><i>Forthcoming in Findings of the ACL'25: Annual Meeting of the Association for Computational Linguistics</i></p>
+                <div class="paper-buttons">
+                   <a class="button" href="https://arxiv.org/abs/2503.03417" target="_blank">📜 Paper</a>
+                </div>
+             </div>
+          </div>
           <!-- paper 1 -->
           <div class="pub-entry">
              <div class="pub-image">
