--- a/research.html
+++ b/research.html
@@ -228,6 +228,7 @@
                 </div>
              </div>
           </div>
+           <div class="pub-entry">
                         <div class="pub-image">
                 <img src="assets/images/papers/claim_misinfo.png" alt="ClaimsEvolve">
              </div>
