--- a/index.html
+++ b/index.html
@@ -232,6 +232,14 @@
     <table style="width: 100%">
 
         <tr>
+          <td style="width: 10%; min-width: 75px;" class="datev">2025-05-09</td>
+          <td style="width: 90%;">
+            🏆 <a href="https://aclanthology.org/2025.acl-long.115/">HateDay</a> got an Outstanding Paper Award at ACL 2025!
+
+          </td>
+        </tr>
+
+        <tr>
           <td style="width: 10%; min-width: 75px;" class="datev">2025-05-16</td>
           <td style="width: 90%;">
             📜 Two papers accepted at ACL 2025:
