--- a/research.html
+++ b/research.html
@@ -222,6 +222,7 @@
              <div class="pub-text">
                 <p class="title"><b>HateDay: Insights from a Global Hate Speech Dataset Representative of a Day on Twitter</b></p>
                 <p><b>Manuel Tonneau</b>, Diyi Liu, Niyati Malhotra, Scott A. Hale, Samuel P. Fraiberger, Victor Orozco-Olvera, Paul Röttger</p>
+                 <p>🏆 Outstanding Paper Award</p>
                 <p><i>ACL'25: Annual Meeting of the Association for Computational Linguistics</i></p>
                 <div class="paper-buttons">
                    <a class="button" href="https://aclanthology.org/2025.acl-long.115/" target="_blank">📜 Paper</a>
