--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
       <div class="nine columns main-description">
             <h1>Manuel Tonneau</h1>
-            <p>Ph.D. student in Social Data Science, University of Oxford</p>
+            <p>Ph.D. candidate in Social Data Science, University of Oxford</p>
             <p>Consultant, Development Impact (DIME), The World Bank</p>
             <p>Associated Researcher, Weizenbaum Institute</p>
             <p>Member of the Open Networks and Big Data Lab, New York University</p>
@@ -146,7 +146,7 @@
    <div class="docs-section">
       <h4>Bio</h4>
       <p>
-         I am a fourth and final year Ph.D. student in Social Data Science at the University of Oxford where I am supervised by <a href='https://www.oii.ox.ac.uk/people/profiles/scott-hale/' target="_blank" rel="noopener noreferrer">Scott Hale</a> and <a href='https://www.oii.ox.ac.uk/people/profiles/ralph-schroeder/' target="_blank" rel="noopener noreferrer">Ralph Schroeder</a>.
+         I am a fourth and final year Ph.D. candidate in Social Data Science at the University of Oxford where I am supervised by <a href='https://www.oii.ox.ac.uk/people/profiles/scott-hale/' target="_blank" rel="noopener noreferrer">Scott Hale</a> and <a href='https://www.oii.ox.ac.uk/people/profiles/ralph-schroeder/' target="_blank" rel="noopener noreferrer">Ralph Schroeder</a>.
          I also consult for the World Bank and am affiliated with the <a href='https://www.weizenbaum-institut.de/en/' target="_blank" rel="noopener noreferrer">Weizenbaum Institute</a> and <a href='https://nyunetworks.github.io/' target="_blank" rel="noopener noreferrer">New York University</a>.
       </p>
        <p>
