--- a/research.html
+++ b/research.html
@@ -120,7 +120,7 @@
       </div>
       <div class="nine columns main-description">
             <h1>Manuel Tonneau</h1>
-            <p>Ph.D. student in Social Data Science, University of Oxford</p>
+            <p>Ph.D. candidate in Social Data Science, University of Oxford</p>
             <p>Consultant, Development Impact (DIME), The World Bank</p>
             <p>Associated Researcher, Weizenbaum Institute</p>
             <p>Member of the Open Networks and Big Data Lab, New York University</p>
