change webpage name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- Basic Page Needs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <meta charset="utf-8">
-<title>Manuel Tonneau | Home</title>
+<title>Manuel Tonneau's Website</title>
 <meta name="description" content="Homepage of Manuel Tonneau">
 <meta name="author" content="Manuel Tonneau">
 
