--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@
 <!-- Basic Page Needs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <meta charset="utf-8">
-<title>Manuel Tonneau | Publications </title>
+<title>Manuel Tonneau's Research </title>
 <meta name="description" content="Publications of Manuel Tonneau">
 <meta name="author" content="Manuel Tonneau">
 
