--- a/index.html
+++ b/index.html
@@ -238,6 +238,12 @@
 
           </td>
         </tr>
+        <tr>
+          <td style="width: 10%; min-width: 75px;" class="datev">2025-07-30</td>
+          <td style="width: 90%;">
+            💬 I was interviewed on the <a href="https://www.youtube.com/watch?v=xIb6DSr5LMM">Somewhere On Earth podcast</a> about our <a href="https://osf.io/preprints/socarxiv/amfws_v1">preprint</a> on language disparities in moderation workforce allocation.
+          </td>
+        </tr>
 
         <tr>
           <td style="width: 10%; min-width: 75px;" class="datev">2025-05-16</td>
