add WB blogpost

--- a/research.html
+++ b/research.html
@@ -272,6 +272,7 @@
                 <div class="paper-buttons">
                    <a class="button" href="https://aclanthology.org/2024.acl-long.488/" target="_blank">📜 Paper</a>
                     <a class="button" href="https://x.com/ManuelTonneau/status/1821125918691123289" target="_blank">🐦 Twitter Thread</a>
+                    <a class="button" href="https://dime-ai-test.my.canva.site/context-specific-ai-for-low-resource-languages-part-1" target="_blank">📰 World Bank Blog</a>
                 </div>
              </div>
           </div>
